--- a/dangling-dns-records/template.yaml
+++ b/dangling-dns-records/template.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
-Description: Creates a Lambda function that writes to an S3 bucket
+Description: Creates a Lambda function that audits for dangling DNS records in the AWS Organization and writes output to an S3 bucket
 Parameters:
   DestinationBucketName:
     Type: String
