addressed security review feedback; blocked public access for s3; enabled versioning for audit result

--- a/dangling-dns-records/template.yaml
+++ b/dangling-dns-records/template.yaml
@@ -19,6 +19,13 @@ Resources:
         ServerSideEncryptionConfiguration:
         - ServerSideEncryptionByDefault:
             SSEAlgorithm: AES256
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: TRUE
+        IgnorePublicAcls: TRUE
+        BlockPublicPolicy: TRUE
+        RestrictPublicBuckets: TRUE
+      VersioningConfiguration:
+        Status: Enabled
     Metadata:
       SamResourceId: DestinationBucket
   LoggingBucket:
