enabling versioning on logging bucket - AWS AppSec Finding: S3 bucket without versioning

--- a/dangling-dns-records/template.yaml
+++ b/dangling-dns-records/template.yaml
@@ -43,6 +43,8 @@ Resources:
         IgnorePublicAcls: TRUE
         BlockPublicPolicy: TRUE
         RestrictPublicBuckets: TRUE
+      VersioningConfiguration:
+        Status: Enabled
     Metadata:
       SamResourceId: LoggingBucket
   LoggingBucketPolicy:
